<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="15dp"
	>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		>
		<LinearLayout android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical"
			>
			<TextView android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:textSize="28sp"
				android:text="@string/source"
				android:id="@+id/sourceLabel"
			/>
			<Button android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/swap"
				android:id="@+id/swapLButton"
			/>
			<Button android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/clearL"
				android:id="@+id/clearLButton"
			/>
			<Button android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/clearT"
				android:id="@+id/clearTButton"
			/>
		</LinearLayout>
		<LinearLayout android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:orientation="vertical"
			>
			<EditText android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:id="@+id/sourceBox"
				/>
			<Spinner android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				/>
			<EditText android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:id="@+id/targetBox"
			/>
		</LinearLayout>
		<LinearLayout android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="vertical"
		>
			<Button android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/clearS"
				android:id="@+id/clearSButton"
			/>
			<Button android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/clearR"
				android:id="@+id/clearRButton"
			/>
			<Button android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/swap"
				android:id="@+id/swapRButton"
			/>
			<TextView android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:textSize="28sp"
				android:text="@string/target"
				android:id="@+id/targetLabel"
			/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
		android:orientation="horizontal"
		>
		<TextView android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			/>
	</LinearLayout>
</LinearLayout>

